@@ -44,7 +44,7 @@ public final class Localization {
 	 * @param notFoundPrefix Flag if the NOSTRINGFOUND_ prefix should be added, if there is no translation found for a key
 	 */
 	public static void init(String baseName, String language, String country, boolean notFoundPrefix) {
-		Locale currentLocale = new Locale(language, country);
+		Locale currentLocale = Locale.of(language, country);
 		msg = ResourceBundle.getBundle(baseName, currentLocale);
 		Localization.notFoundPrefix = notFoundPrefix;
 	}
